# natural-queries

./: .gitignore  404.html  CNAME  README.md  index.html  package.json  render.yaml  tsconfig.dev.json  vite.config.mjs  vite.config.ts
assets/: AppShellLayout-70t2_w5v.js  AppShellLayout-8DdazMrW.js  AppShellLayout-B414owOa.js  AppShellLayout-CAD4_MrY.js  AppShellLayout-CFZsAPNX.js  AppShellLayout-D-bbat_z.js  Home-2YFxGeDH.css  (+622 more)
natural-queries-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
natural-queries-backend/app/: cache.py  config.py  jsonutil.py  main.py  observability.py  ratelimit.py
natural-queries-backend/app/pipeline/: __init__.py  generate.py  models.py  prompts.py  validate.py
natural-queries-backend/app/providers/: __init__.py  anthropic.py  base.py  catalog.py  google.py  groq.py  router.py
natural-queries-backend/app/retrieval/: __init__.py  base.py  keyword.py  whole.py
natural-queries-backend/app/schema/: __init__.py  descriptions.py  loader.py  models.py  schema.json
natural-queries-backend/app/story/: __init__.py  cache.py  generate.py  models.py  prompts.py
natural-queries-backend/etl/: README.md  __init__.py  build_parquet.py  config.py  extract.py  schema.py  transform.py
natural-queries-backend/tests/: test_config.py  test_etl.py  test_generate_endpoint.py  test_hardening.py  test_health.py  test_jsonutil.py  test_pipeline.py  test_provider_payloads.py  test_providers.py  test_retrieval.py  test_schema.py  test_sql_fixtures.py  test_story.py  test_story_endpoint.py  test_validate.py
(+78 files in other folders)
